Programming languages and paradigms/Interpreter/examples/bad/call_non_function.ho
func main() {
    var f = 5;
    f(); // error:3:5: cannot call non-function f (type int)
}